改掉授权信息

--- a/app/desktop/view/index.html
+++ b/app/desktop/view/index.html
@@ -60,7 +60,8 @@ window.loadedPart = [1,0,startTime];
     <div class="header-inner clearfix">
       <div class="top-bar clearfix" id="topbar">
         <h1 class="logo">
-          <a href="index.php?ctl=dashboard&act=index"><{$env.conf.desktop.banner}></a>
+          <!--<a href="index.php?ctl=dashboard&act=index"><{$env.conf.desktop.banner}></a>-->
+          <a href="index.php?ctl=dashboard&act=index">B2C在线商城</a>
           <span class="head-license">
               <a target="_blank" href="<{$certificate_url}>" id="license" style="display:none;"></a>
           </span>
